<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/riga">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/squadre"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/squadra1"
            android:layout_gravity="center_vertical"
            android:background="@color/blucc"
            android:text="AAAAAAAAAA"
            android:gravity="right"
            android:layout_weight="1"
            android:fontFamily="@font/cb"
            >
        </TextView>

        <ImageView
            android:id="@+id/imageMatita"
            android:background="@drawable/modifica"
            android:onClick="aggiornaPartita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/squadra2"
            android:layout_gravity="center_vertical"
            android:background="@color/rossocc"
            android:text="BBBBBBBBB"
            android:layout_weight="1"
            android:fontFamily="@font/cb"
            >
        </TextView>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/datapartita"
        android:layout_below="@id/squadre"
        android:text="CCCCCCCC"
        android:fontFamily="@font/cr">
    </TextView>

    <RelativeLayout
        android:layout_below="@id/datapartita"
        android:id="@+id/primoRelative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/GolCasa"
            android:textSize="46dp"
            android:inputType="number"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/imageSpunta"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_centerInParent="true"
            android:background="@drawable/pubblica"
            android:onClick="pubblicaRisultato" />

        <EditText
            android:id="@+id/Golospite"
            android:textSize="46dp"
            android:inputType="number"
            android:layout_marginRight="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
</RelativeLayout>