...
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:background="@drawable/pulsantimenu"
            android:layout_weight="1" >

            <RelativeLayout
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="passasezione"
                android:background="@color/rosso"
                android:layout_weight="1">
            <RelativeLayout
...
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/utenti"
                    android:onClick="passasezione"
                    android:alpha="0.5"
                    android:id="@+id/button2b"
                    >
                </Button>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
