...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-50"
                        android:background="@color/rossos"
                        android:textColor="@color/biancos"
                        android:onClick="aggiungiQuantità"
                        android:id="@+id/menocinquanta"
                        android:fontFamily="@font/cb"
                        >
                    </Button>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/saldoutente"
                        android:gravity="center"
                        android:inputType="number"
                        android:layout_centerHorizontal="true"
                        android:text="SALDO">
                    </EditText>

...
                        android:layout_height="wrap_content"
                        android:text="+50"
                        android:background="@color/verdes"
                        android:textColor="@color/biancos"
                        android:layout_alignParentEnd="true"
                        android:onClick="aggiungiQuantità"
                        android:id="@+id/piucinquanta"
                        android:fontFamily="@font/cb"
                        >
                    </Button>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/aggiornasaldo"
                        android:background="@color/blus"
                        android:layout_centerHorizontal="true"
                        android:text="AGGIORNA SALDO"
                        android:layout_below="@id/saldoutente"
                        android:onClick="aggiornaSaldo"
                        android:textColor="@color/biancos"
...
